v1.2 overflow fixed, missing font added

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,4 +1,4 @@
 .content {
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    overflow: hidden;
 }
