--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,39 +1,18 @@
 .cover__title {
-    margin: 0;
+    margin: 0 auto;
     text-align: center;
-    position: absolute;
-    top: 30%;
+    max-width: 288px;
 
     font-family: 'Inter', 'Arial', sans-serif;
     font-weight: 900;
     font-size: 32px;
     line-height: 1.09;
-    max-width: 288px;
-}
-
-@media screen and (min-width: 500px) {
-    .cover__title {
-        top: 35%;
-    }
 }
 
 @media screen and (min-width: 768px) {
     .cover__title {
         font-size: 72px;
         line-height: 1.06;
-        top: 30%;
         max-width: 560px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .cover__title {
-        top: 34%;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .cover__title {
-        top: 36%;
     }
 }
