--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,5 @@
 .cover {
     padding: 52px 0;
-    position: relative;
     display: flex;
     justify-content: center;
 }
