--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 16px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
