--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,6 +2,7 @@
    width: 100%;
    min-width: 320px;
    min-height: 320px;
+   max-width: 460px;
 }
 
 @media screen and (max-width: 660px) {
